[package]
name = "shooter"
version = "0.1.0"
edition = "2021"
authors = ["Aunmag <aunmag@gmail.com>"]

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
anyhow = "1.0"
bevy = "0.10"
config = "0.13"
derive_more = "0.99"
enumset = { version = "1.1", features = ["serde"] }
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
rand_pcg = "0.3"
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
