[package]
name = "shooter"
edition = "2021"
authors = ["Aunmag <aunmag@gmail.com>"]

[dependencies]
anyhow = "1.0"
bevy = "0.12"
chrono = "0.4"
derive_more = "0.99"
enumset = { version = "1.1", features = ["serde"] }
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
approx = "0.5"

# Enable more optimizations for dependencies in debug mode but not the project code itself
# See: https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
# basic
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# basic exceptions
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
needless_return = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
unwrap_or_default = "allow"
# extra restrictions
explicit_into_iter_loop = "warn"
get_unwrap = "warn"
impl_trait_in_params = "warn"
imprecise_flops = "warn"
lossy_float_literal = "warn"
manual_let_else = "warn"
multiple_inherent_impl = "warn"
panic_in_result_fn = "warn"
print_stderr = "warn"
print_stdout = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_if_nothing_returned = "warn"
string_to_string = "warn"
unneeded_field_pattern = "warn"
unused_self = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
